# cfetch

./: CMakeLists.txt  README.md
include/cfetchlib/: Config.hpp  Fetch.hpp
src/: CMakeLists.txt
src/cfetch/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/cfetchlib/: CMakeLists.txt  Fetch.cpp
